# AnonChat

./: README.md
client/: CMakeLists.txt  ReceiveRunnable.cpp  ReceiveRunnable.h  ServerCommand.cpp  ServerCommand.h  User.cpp  User.h  WebSocketHandler.cpp  WebSocketHandler.h  enum_AgeCategory.h  enum_ConversationCategory.h  enum_Sex.h  main.cpp  project_resources.qrc  u_defer.h  utils_JSON.cpp  utils_JSON.h  utils_bitwiseEnum.h
client/qml/: Chat.qml  RandomSearch.qml  enumTranslations.js  main.qml
server/: ageCategory.go  app.go  appMatchmaking.go  client.go  connections.go  conversationCategory.go  go.mod  go.sum  idGenerator.go  main.go  optional.go  pair.go  randomMatchmakingManager.go  sexCategory.go  test.go  trace.out
